--- a/src/.editorconfig
+++ b/src/.editorconfig
@@ -1,13 +1,6 @@
 root = true
 
 [*]
-charset = utf-8
-end_of_line = lf
-indent_size = 4
-indent_style = space
-insert_final_newline = false
-max_line_length = 120
-tab_width = 4
 ij_continuation_indent_size = 8
 ij_formatter_off_tag = @formatter:off
 ij_formatter_on_tag = @formatter:on
@@ -15,7 +8,7 @@ ij_formatter_tags_enabled = false
 ij_smart_tabs = false
 ij_wrap_on_typing = false
 
-[]
+[*.json]
 ij_json_keep_blank_lines_in_code = 0
 ij_json_keep_indents_on_empty_lines = false
 ij_json_keep_line_breaks = true
@@ -28,25 +21,23 @@ ij_json_spaces_within_brackets = false
 ij_json_wrap_long_lines = false
 
 [*.java]
-ij_smart_tabs = true
-ij_wrap_on_typing = true
 ij_java_align_consecutive_assignments = false
 ij_java_align_consecutive_variable_declarations = false
 ij_java_align_group_field_declarations = false
 ij_java_align_multiline_annotation_parameters = true
 ij_java_align_multiline_array_initializer_expression = false
-ij_java_align_multiline_assignment = true
-ij_java_align_multiline_binary_operation = true
+ij_java_align_multiline_assignment = false
+ij_java_align_multiline_binary_operation = false
 ij_java_align_multiline_chained_methods = true
 ij_java_align_multiline_extends_list = false
 ij_java_align_multiline_for = true
-ij_java_align_multiline_method_parentheses = true
+ij_java_align_multiline_method_parentheses = false
 ij_java_align_multiline_parameters = true
 ij_java_align_multiline_parameters_in_calls = true
-ij_java_align_multiline_parenthesized_expression = true
+ij_java_align_multiline_parenthesized_expression = false
 ij_java_align_multiline_records = true
 ij_java_align_multiline_resources = true
-ij_java_align_multiline_ternary_operation = true
+ij_java_align_multiline_ternary_operation = false
 ij_java_align_multiline_text_blocks = true
 ij_java_align_multiline_throws_list = false
 ij_java_align_subsequent_simple_methods = false
@@ -57,7 +48,7 @@ ij_java_array_initializer_right_brace_on_new_line = false
 ij_java_array_initializer_wrap = off
 ij_java_assert_statement_colon_on_next_line = false
 ij_java_assert_statement_wrap = off
-ij_java_assignment_wrap = on_every_item
+ij_java_assignment_wrap = off
 ij_java_binary_operation_sign_on_next_line = false
 ij_java_binary_operation_wrap = off
 ij_java_blank_lines_after_anonymous_class_header = 0
@@ -69,7 +60,7 @@ ij_java_blank_lines_around_field = 0
 ij_java_blank_lines_around_field_in_interface = 0
 ij_java_blank_lines_around_initializer = 1
 ij_java_blank_lines_around_method = 1
-ij_java_blank_lines_around_method_in_interface = 0
+ij_java_blank_lines_around_method_in_interface = 1
 ij_java_blank_lines_before_class_end = 0
 ij_java_blank_lines_before_imports = 1
 ij_java_blank_lines_before_method_body = 0
@@ -78,7 +69,7 @@ ij_java_block_brace_style = end_of_line
 ij_java_block_comment_at_first_column = true
 ij_java_call_parameters_new_line_after_left_paren = false
 ij_java_call_parameters_right_paren_on_new_line = false
-ij_java_call_parameters_wrap = off
+ij_java_call_parameters_wrap = on_every_item
 ij_java_case_statement_on_separate_line = true
 ij_java_catch_on_new_line = false
 ij_java_class_annotation_wrap = split_into_lines
@@ -87,7 +78,7 @@ ij_java_class_count_to_use_import_on_demand = 5
 ij_java_class_names_in_javadoc = 1
 ij_java_do_not_indent_top_level_class_members = false
 ij_java_do_not_wrap_after_single_annotation = false
-ij_java_do_while_brace_force = if_multiline
+ij_java_do_while_brace_force = never
 ij_java_doc_add_blank_line_after_description = true
 ij_java_doc_add_blank_line_after_param_comments = true
 ij_java_doc_add_blank_line_after_return = true
@@ -107,18 +98,18 @@ ij_java_doc_param_description_on_new_line = false
 ij_java_doc_preserve_line_breaks = false
 ij_java_doc_use_throws_not_exception_tag = true
 ij_java_else_on_new_line = false
-ij_java_enum_constants_wrap = on_every_item
+ij_java_enum_constants_wrap = off
 ij_java_extends_keyword_wrap = off
 ij_java_extends_list_wrap = off
 ij_java_field_annotation_wrap = split_into_lines
 ij_java_finally_on_new_line = false
-ij_java_for_brace_force = if_multiline
+ij_java_for_brace_force = never
 ij_java_for_statement_new_line_after_left_paren = false
 ij_java_for_statement_right_paren_on_new_line = false
-ij_java_for_statement_wrap = on_every_item
+ij_java_for_statement_wrap = off
 ij_java_generate_final_locals = false
 ij_java_generate_final_parameters = false
-ij_java_if_brace_force = if_multiline
+ij_java_if_brace_force = never
 ij_java_imports_layout = *,|,javax.**,java.**,|,$*
 ij_java_indent_case_from_switch = true
 ij_java_insert_inner_class_imports = false
@@ -165,7 +156,7 @@ ij_java_replace_null_check = true
 ij_java_replace_sum_lambda_with_method_ref = true
 ij_java_resource_list_new_line_after_left_paren = false
 ij_java_resource_list_right_paren_on_new_line = false
-ij_java_resource_list_wrap = on_every_item
+ij_java_resource_list_wrap = off
 ij_java_rparen_on_new_line_in_record_header = false
 ij_java_space_after_closing_angle_bracket_in_type_argument = false
 ij_java_space_after_colon = true
@@ -176,7 +167,7 @@ ij_java_space_after_quest = true
 ij_java_space_after_type_cast = true
 ij_java_space_before_annotation_array_initializer_left_brace = false
 ij_java_space_before_annotation_parameter_list = false
-ij_java_space_before_array_initializer_left_brace = true
+ij_java_space_before_array_initializer_left_brace = false
 ij_java_space_before_catch_keyword = true
 ij_java_space_before_catch_left_brace = true
 ij_java_space_before_catch_parentheses = true
@@ -191,7 +182,7 @@ ij_java_space_before_finally_keyword = true
 ij_java_space_before_finally_left_brace = true
 ij_java_space_before_for_left_brace = true
 ij_java_space_before_for_parentheses = true
-ij_java_space_before_for_semicolon = true
+ij_java_space_before_for_semicolon = false
 ij_java_space_before_if_left_brace = true
 ij_java_space_before_if_parentheses = true
 ij_java_space_before_method_call_parentheses = false
@@ -210,7 +201,7 @@ ij_java_space_before_while_keyword = true
 ij_java_space_before_while_left_brace = true
 ij_java_space_before_while_parentheses = true
 ij_java_space_inside_one_line_enum_braces = false
-ij_java_space_within_empty_array_initializer_braces = true
+ij_java_space_within_empty_array_initializer_braces = false
 ij_java_space_within_empty_method_call_parentheses = false
 ij_java_space_within_empty_method_parentheses = false
 ij_java_spaces_around_additive_operators = true
@@ -227,24 +218,24 @@ ij_java_spaces_around_type_bounds_in_type_parameters = true
 ij_java_spaces_around_unary_operator = false
 ij_java_spaces_within_angle_brackets = false
 ij_java_spaces_within_annotation_parentheses = false
-ij_java_spaces_within_array_initializer_braces = true
+ij_java_spaces_within_array_initializer_braces = false
 ij_java_spaces_within_braces = false
-ij_java_spaces_within_brackets = true
-ij_java_spaces_within_cast_parentheses = true
-ij_java_spaces_within_catch_parentheses = true
-ij_java_spaces_within_for_parentheses = true
-ij_java_spaces_within_if_parentheses = true
-ij_java_spaces_within_method_call_parentheses = true
-ij_java_spaces_within_method_parentheses = true
-ij_java_spaces_within_parentheses = true
-ij_java_spaces_within_switch_parentheses = true
-ij_java_spaces_within_synchronized_parentheses = true
-ij_java_spaces_within_try_parentheses = true
-ij_java_spaces_within_while_parentheses = true
+ij_java_spaces_within_brackets = false
+ij_java_spaces_within_cast_parentheses = false
+ij_java_spaces_within_catch_parentheses = false
+ij_java_spaces_within_for_parentheses = false
+ij_java_spaces_within_if_parentheses = false
+ij_java_spaces_within_method_call_parentheses = false
+ij_java_spaces_within_method_parentheses = false
+ij_java_spaces_within_parentheses = false
+ij_java_spaces_within_switch_parentheses = false
+ij_java_spaces_within_synchronized_parentheses = false
+ij_java_spaces_within_try_parentheses = false
+ij_java_spaces_within_while_parentheses = false
 ij_java_special_else_if_treatment = true
 ij_java_subclass_name_suffix = Impl
 ij_java_ternary_operation_signs_on_next_line = false
-ij_java_ternary_operation_wrap = on_every_item
+ij_java_ternary_operation_wrap = off
 ij_java_test_name_suffix = Test
 ij_java_throws_keyword_wrap = off
 ij_java_throws_list_wrap = off
@@ -252,9 +243,9 @@ ij_java_use_external_annotations = false
 ij_java_use_fq_class_names = false
 ij_java_use_relative_indents = false
 ij_java_use_single_class_imports = true
-ij_java_variable_annotation_wrap = on_every_item
+ij_java_variable_annotation_wrap = off
 ij_java_visibility = public
-ij_java_while_brace_force = if_multiline
+ij_java_while_brace_force = never
 ij_java_while_on_new_line = false
 ij_java_wrap_comments = false
 ij_java_wrap_first_method_in_call_chain = false
